@@ -981,3 +981,7 @@
 2013-02-24:
 
 	callmonitor-1.20.9 (beta)
+
+2014-10-12:
+
+	* reverse: DasÖrtliche repariert
